# nlp-cli-suite

./: .gitignore  LICENSE  README.md  artifacts.csv  pyproject.toml  suite.yaml
.github/workflows/: archive.yml  ci.yml  fast.yml  regression.yml  research-ci.yml
baseline_results/: EleutherAI_pythia-70m.json  distilgpt2.json  facebook_opt-125m.json  gpt2.json
current_results/: EleutherAI_pythia-70m.json  distilgpt2.json
nlp_tool/: benchmark.py  cli.py  compare.py  compare_cmd.py  export.py  ingest.py  report.py  suite_cmd.py  suite_runner.py
results/: facebook_opt-125m.json  gpt2.json  opt.json
