[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nlp-cli-suite"
version = "0.1.0"
description = "Unified NLP infrastructure CLI"
requires-python = ">=3.8"
dependencies = [
    "nlp-engine-yuvraj>=0.1.1",
    "hf-inference-benchmark>=0.1.4",
    "click>=8.0"
]

[project.scripts]
nlp-tool = "nlp_tool.cli:main"

[tool.setuptools.packages.find]
where = ["."]
